force-app/main/default/objects/Package__c/fields/ServicesTotalExpenseCHF__c.field-meta.xml
<CustomField>
    <fullName>ServicesTotalExpenseCHF__c</fullName>
    <label>Services - Total Expense (CHF)</label>
    <summarizedField>Expense__c.ServiceExpenseNetCHF__c</summarizedField>
    <summaryForeignKey>Expense__c.Package__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>