force-app/main/default/objects/Package__c/fields/ServicesTotalHours__c.field-meta.xml
<CustomField>
    <fullName>ServicesTotalHours__c</fullName>
    <label>Services - Total Hours</label>
    <summarizedField>Time__c.DurationHhMmN__c</summarizedField>
    <summaryForeignKey>Time__c.Package__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>