force-app/main/default/objects/Package__c/fields/ServicesTotalSupplierCostsCHF__c.field-meta.xml
<CustomField>
    <fullName>ServicesTotalSupplierCostsCHF__c</fullName>
    <label>Services - Total Supplier Costs (CHF)</label>
    <summarizedField>SupplierCosts__c.ServiceSupplierCostsNetCHF__c</summarizedField>
    <summaryForeignKey>SupplierCosts__c.PackageName__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>