force-app/main/default/objects/Package__c/fields/ServicesTotalTime__c.field-meta.xml
<CustomField>
    <fullName>ServicesTotalTime__c</fullName>
    <label>Services - Total Time</label>
    <summarizedField>Time__c.ServiceTotalTime__c</summarizedField>
    <summaryForeignKey>Time__c.Package__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>