force-app/main/default/objects/Package__c/fields/ServiceTotalExpenseCHFBP__c.field-meta.xml
<CustomField>
    <fullName>ServiceTotalExpenseCHFBP__c</fullName>
    <label>Service - Total Expense (CHF) - BP</label>
    <summarizedField>Expense__c.CostsExpenseNetCHF__c</summarizedField>
    <summaryFilterItems>
        <field>Expense__c.IsInBillingPeriodYearMonth__c</field>
        <operation>equals</operation>
        <value>2026.4</value>
    </summaryFilterItems>
    <summaryForeignKey>Expense__c.Package__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>