force-app/main/default/objects/Package__c/fields/ServiceTotalSupplierCostCHFBP__c.field-meta.xml
<CustomField>
    <fullName>ServiceTotalSupplierCostCHFBP__c</fullName>
    <label>Service - Total Supplier Cost (CHF) - BP</label>
    <summarizedField>SupplierCosts__c.CostsSupplierCostsNetCHF__c</summarizedField>
    <summaryFilterItems>
        <field>SupplierCosts__c.IsInBillingPeriodYearMonth__c</field>
        <operation>equals</operation>
        <value>2024.6</value>
    </summaryFilterItems>
    <summaryForeignKey>SupplierCosts__c.PackageName__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>