force-app/main/default/objects/Package__c/fields/ServiceTotalTimeCHFBP__c.field-meta.xml
<CustomField>
    <fullName>ServiceTotalTimeCHFBP__c</fullName>
    <label>Service - Total Time (CHF) - BP</label>
    <summarizedField>Time__c.ServiceTotalTimeCHF__c</summarizedField>
    <summaryFilterItems>
        <field>Time__c.IsInBillingPeriodYearMonth__c</field>
        <operation>equals</operation>
        <value>2026.4</value>
    </summaryFilterItems>
    <summaryForeignKey>Time__c.Package__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>