force-app/main/default/objects/Package__c/fields/ShowInvoiceText__c.field-meta.xml
<CustomField>
    <fullName>ShowInvoiceText__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Show Invoice Text</label>
    <type>Checkbox</type>
</CustomField>