force-app/main/default/objects/Package__c/fields/StaffNr__c.field-meta.xml
<CustomField>
    <fullName>StaffNr__c</fullName>
    <formula>IF(
AND(
NOT(ISPICKVAL( AbacusTimeType__c ,&quot;200&quot;)),
NOT(ISPICKVAL( AbacusTimeType__c ,&quot;Default&quot;))
),
ProjectName__r.ProjectResponsibleBusiness__r.StaffNr__c,&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Staff Nr.</label>
    <type>Text</type>
</CustomField>