force-app/main/default/objects/Package__c/fields/SupplierCostsGroup__c.field-meta.xml
<CustomField>
    <fullName>SupplierCostsGroup__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Click this flag if you do want to present this service within the separate section below the total on the invoice.</inlineHelpText>
    <label>Supplier Costs Group</label>
    <type>Checkbox</type>
</CustomField>