force-app/main/default/objects/Package__c/fields/ValCheckValidPackage__c.field-meta.xml
<CustomField>
    <fullName>ValCheckValidPackage__c</fullName>
    <formula>TRUE</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ValCheckValidPackage</label>
    <type>Checkbox</type>
</CustomField>