force-app/main/default/objects/Package__c/fields/ValCountHasExpense__c.field-meta.xml
<CustomField>
    <fullName>ValCountHasExpense__c</fullName>
    <label>ValCountHasExpense</label>
    <summaryForeignKey>Expense__c.Package__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>