force-app/main/default/objects/Package__c/fields/ValCountHasExpenseCheckbox__c.field-meta.xml
<CustomField>
    <fullName>ValCountHasExpenseCheckbox__c</fullName>
    <formula>If(ValCountHasExpense__c=0,false,true)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ValCountHasExpenseCheckbox</label>
    <type>Checkbox</type>
</CustomField>