force-app/main/default/objects/Package__c/fields/ValCountHasILVDraft__c.field-meta.xml
<CustomField>
    <fullName>ValCountHasILVDraft__c</fullName>
    <formula>ProjectName__r.ValCountHasILVDraft__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ValCountHasILVDraft</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>