force-app/main/default/objects/Package__c/fields/ValCountHasILVPos__c.field-meta.xml
<CustomField>
    <fullName>ValCountHasILVPos__c</fullName>
    <label>ValCountHasILVPos</label>
    <summaryForeignKey>ILVPos__c.PackageName__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>