force-app/main/default/objects/Package__c/fields/ValCountHasIlvPosCheckbox__c.field-meta.xml
<CustomField>
    <fullName>ValCountHasIlvPosCheckbox__c</fullName>
    <formula>If(ValCountHasILVPos__c=0,false,true)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ValCountHasIlvPosCheckbox</label>
    <type>Checkbox</type>
</CustomField>