force-app/main/default/objects/Package__c/fields/ValCountHasInvoicePos__c.field-meta.xml
<CustomField>
    <fullName>ValCountHasInvoicePos__c</fullName>
    <label>ValCountHasInvoicePos</label>
    <summaryForeignKey>InvoicePos__c.PackageName__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>