force-app/main/default/objects/Package__c/fields/ValCountHasInvoicePosCheckbox__c.field-meta.xml
<CustomField>
    <fullName>ValCountHasInvoicePosCheckbox__c</fullName>
    <formula>If(ValCountHasInvoicePos__c=0,false,true)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ValCountHasInvoicePosCheckbox</label>
    <type>Checkbox</type>
</CustomField>