force-app/main/default/objects/Package__c/fields/ValCountHasSupplierCosts__c.field-meta.xml
<CustomField>
    <fullName>ValCountHasSupplierCosts__c</fullName>
    <label>ValCountHasSupplierCosts</label>
    <summaryForeignKey>SupplierCosts__c.PackageName__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>