force-app/main/default/objects/Package__c/fields/ValCountHasSupplierCostsCheckbox__c.field-meta.xml
<CustomField>
    <fullName>ValCountHasSupplierCostsCheckbox__c</fullName>
    <formula>If(ValCountHasSupplierCosts__c=0,false,true)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ValCountHasSupplierCostsCheckbox</label>
    <type>Checkbox</type>
</CustomField>