force-app/main/default/objects/Package__c/fields/ValCountHasTime__c.field-meta.xml
<CustomField>
    <fullName>ValCountHasTime__c</fullName>
    <label>ValCountHasTime</label>
    <summaryForeignKey>Time__c.Package__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>