force-app/main/default/objects/Package__c/fields/ValCountHasTimeCheckbox__c.field-meta.xml
<CustomField>
    <fullName>ValCountHasTimeCheckbox__c</fullName>
    <formula>If(ValCountHasTime__c=0,false,true)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ValCountHasTimeCheckbox</label>
    <type>Checkbox</type>
</CustomField>