force-app/main/default/objects/Package__c/fields/ValHasILVPos__c.field-meta.xml
<CustomField>
    <fullName>ValHasILVPos__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ValHasILVPos</label>
    <type>Checkbox</type>
</CustomField>