force-app/main/default/objects/Package__c/fields/ValHasInvoicePos__c.field-meta.xml
<CustomField>
    <fullName>ValHasInvoicePos__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ValHasInvoicePos</label>
    <type>Checkbox</type>
</CustomField>