force-app/main/default/objects/Package__c/fields/ValHasPackage__c.field-meta.xml
<CustomField>
    <fullName>ValHasPackage__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ValHasPackage</label>
    <type>Checkbox</type>
</CustomField>