force-app/main/default/objects/Package__c/fields/ValNoDeletePRSPrintPlus__c.field-meta.xml
<CustomField>
    <fullName>ValNoDeletePRSPrintPlus__c</fullName>
    <formula>AND(
ZImportSource__c =&quot;PrintPlus&quot;,
 ZImportTimeStamp__c =&quot;2017-04-13&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ValNoDeletePRSPrintPlus</label>
    <type>Checkbox</type>
</CustomField>