force-app/main/default/objects/Package__c/fields/ValPackageLockedInvoiceDraft__c.field-meta.xml
<CustomField>
    <fullName>ValPackageLockedInvoiceDraft__c</fullName>
    <formula>OR(
 ProjectName__r.ValCountHasInvoiceDraft__c &gt;1,
 ProjectName__r.ValCountHasILVDraft__c &gt;1
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ValPackageLockedInvoiceDraft</label>
    <type>Checkbox</type>
</CustomField>