force-app/main/default/objects/Package__c/recordTypes/LicenseDirect.recordType-meta.xml
<RecordType>
    <fullName>LicenseDirect</fullName>
    <active>true</active>
    <label>License (Direct) / Trade</label>
</RecordType>