force-app/main/default/objects/Package__c/recordTypes/LicenseProvision.recordType-meta.xml
<RecordType>
    <fullName>LicenseProvision</fullName>
    <active>true</active>
    <label>License (Provision)</label>
</RecordType>