force-app/main/default/objects/Package__c/recordTypes/SupplierCosts.recordType-meta.xml
<RecordType>
    <fullName>SupplierCosts</fullName>
    <active>true</active>
    <label>Supplier Costs</label>
</RecordType>