force-app/main/default/objects/Package__c/validationRules/PA000_Package_Max_Level.validationRule-meta.xml
<ValidationRule>
    <fullName>PA000_Package_Max_Level</fullName>
    <active>true</active>
    <description>Package can not be assigend &gt; Level 2</description>
    <errorConditionFormula>AND(
 $User.PS480FunctionValidationRulesActive__c =true,
NOT(ISBLANK( PackageSuperior__r.PackageSuperior__c )))</errorConditionFormula>
    <errorDisplayField>PackageSuperior__c</errorDisplayField>
    <errorMessage>You can not assign to a package that is already level 2. Please contact your Super User for assistance.
(PA000)</errorMessage>
</ValidationRule>