force-app/main/default/objects/Package__c/validationRules/PA001_RecordType_Group_Level_1.validationRule-meta.xml
<ValidationRule>
    <fullName>PA001_RecordType_Group_Level_1</fullName>
    <active>true</active>
    <description>Record Type &quot;Group&quot; only allowed on Level 1</description>
    <errorConditionFormula>AND(
 $User.PS480FunctionValidationRulesActive__c =true,

RecordType.DeveloperName =&quot;Group&quot;,
NOT(ISBLANK( PackageSuperior__c ))
)</errorConditionFormula>
    <errorMessage>Level 2 Packages can not be of Type &quot;Group&quot;. Please contact your Super User for assistance.
(PA001)</errorMessage>
</ValidationRule>