force-app/main/default/objects/Package__c/validationRules/PA002_RecordType_Superior_Must_Be_Group.validationRule-meta.xml
<ValidationRule>
    <fullName>PA002_RecordType_Superior_Must_Be_Group</fullName>
    <active>true</active>
    <description>Record Type of Superior Package must be Group</description>
    <errorConditionFormula>AND(
 $User.PS480FunctionValidationRulesActive__c =true,

PackageSuperior__r.RecordType.DeveloperName &lt;&gt; &quot;Group&quot;,
NOT(ISBLANK(PackageSuperior__r.RecordType.DeveloperName))
)</errorConditionFormula>
    <errorMessage>Level 2 Packages can only be attached to Level 1 Packages of Type &quot;Group&quot;. Please contact your Super User for assistance.
(PA002)</errorMessage>
</ValidationRule>