force-app/main/default/objects/Package__c/validationRules/PA003_Package_Move_to_other_Package.validationRule-meta.xml
<ValidationRule>
    <fullName>PA003_Package_Move_to_other_Package</fullName>
    <active>false</active>
    <description>24.05.2017, ary: VR ausgeschaltet, wir lassen das neu zu.

Superior Package can not be changed after Child exist(ed)</description>
    <errorConditionFormula>AND(
 $User.PS480FunctionValidationRulesActive__c =true,

ISCHANGED( PackageSuperior__c ),
ValHasInvoicePos__c =true
)</errorConditionFormula>
    <errorDisplayField>PackageSuperior__c</errorDisplayField>
    <errorMessage>Package can not be reassigned due to existing Invoice Positions. Please contact your Super User for assistance.
(PA003)</errorMessage>
</ValidationRule>