force-app/main/default/objects/Package__c/validationRules/PA009_Billing_Template_Match.validationRule-meta.xml
<ValidationRule>
    <fullName>PA009_Billing_Template_Match</fullName>
    <active>true</active>
    <description>The Billing Template Checkboxes must match</description>
    <errorConditionFormula>AND(
 $User.PS480FunctionValidationRulesActive__c =true,


OR(
  AND(
  ShowPositionAmount__c=true,
  ShowPosition__c=false
  ),

  AND(
  ShowInvoiceText__c=true,
  ShowPosition__c=false
  )
))</errorConditionFormula>
    <errorDisplayField>ShowInvoiceText__c</errorDisplayField>
    <errorMessage>Checkboxes are not in line for billing template.
(PA009)</errorMessage>
</ValidationRule>