force-app/main/default/objects/Package__c/validationRules/PA011_Package_Status_Mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>PA011_Package_Status_Mandatory</fullName>
    <active>true</active>
    <description>Package must have Status</description>
    <errorConditionFormula>AND(
 $User.PS480FunctionValidationRulesActive__c =true,
ISBLANK( TEXT(PackageStatus__c )))</errorConditionFormula>
    <errorDisplayField>PackageStatus__c</errorDisplayField>
    <errorMessage>You must choose a Package Status.
(PA011)</errorMessage>
</ValidationRule>