force-app/main/default/objects/Package__c/validationRules/PA014_Package_Sub_Type_Mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>PA014_Package_Sub_Type_Mandatory</fullName>
    <active>true</active>
    <description>Package must have Sub-Type.</description>
    <errorConditionFormula>AND(
 $User.PS480FunctionValidationRulesActive__c =true,
ISBLANK( TEXT( PackageSubType__c  )))</errorConditionFormula>
    <errorDisplayField>PackageSubType__c</errorDisplayField>
    <errorMessage>You must choose the Package Sub-Type
(PA014)</errorMessage>
</ValidationRule>