force-app/main/default/objects/Package__c/validationRules/PA017_Has_Invoice_Or_ILV_Status_Draft_1.validationRule-meta.xml
<ValidationRule>
    <fullName>PA017_Has_Invoice_Or_ILV_Status_Draft_1</fullName>
    <active>true</active>
    <description>Project has an Invoice and/or an ILV in Status Draft.</description>
    <errorConditionFormula>AND(
 $User.PS480FunctionValidationRulesActive__c =true,
OR(
ProjectName__r.ValCountHasInvoiceDraft__c &gt;0,
ProjectName__r.ValCountHasILVDraft__c &gt;0
),
OR(
ISCHANGED(PackageSuperior__c),
ISCHANGED(ProjectName__c),
ISCHANGED(PackageSubType__c),
ISCHANGED(PackageRateHour__c),
ISCHANGED(PackageSortNr__c)
)
)</errorConditionFormula>
    <errorMessage>The Package is locked due to an Invoice or ILV in Status &quot;&quot;Draft&quot;&quot;. Please complete Invoice first.
(PA017)</errorMessage>
</ValidationRule>