force-app/main/default/objects/Package__c/validationRules/PA025_Package_Closed_SubType_No_Change.validationRule-meta.xml
<ValidationRule>
    <fullName>PA025_Package_Closed_SubType_No_Change</fullName>
    <active>true</active>
    <description>Package Subtype kann nicht mehr verändert werden, wenn Zeitkarten dran hängen.</description>
    <errorConditionFormula>AND(
$User.PS480FunctionValidationRulesActive__c =true,
ValHasTime__c=true,
ISCHANGED( PackageSubType__c )
)</errorConditionFormula>
    <errorDisplayField>PackageSubType__c</errorDisplayField>
    <errorMessage>The Service Sub-Type can not be changed anymore since it contains time.
(PA025)</errorMessage>
</ValidationRule>