force-app/main/default/objects/Package__c/validationRules/PA026_Subtype_Manufaktur_only_SVA.validationRule-meta.xml
<ValidationRule>
    <fullName>PA026_Subtype_Manufaktur_only_SVA</fullName>
    <active>true</active>
    <description>Package Subtype Manufaktur kann nur an SVH Projekten hängen</description>
    <errorConditionFormula>AND(
$User.PS480FunctionValidationRulesActive__c =true,
Text(PackageSubType__c) = &quot;Manufaktur&quot;,
ProjectName__r.ProjectCostCenter__r.CostCenterNr__c &lt;&gt;&quot;4820&quot;
)</errorConditionFormula>
    <errorDisplayField>PackageSubType__c</errorDisplayField>
    <errorMessage>The Service Sub-Type can not be &quot;Manufaktur&quot; for non SVA Projects
(PA026)</errorMessage>
</ValidationRule>