force-app/main/default/objects/Package__c/validationRules/PA028_SubType_Trade.validationRule-meta.xml
<ValidationRule>
    <fullName>PA028_SubType_Trade</fullName>
    <active>true</active>
    <errorConditionFormula>AND( 
$User.PS480FunctionValidationRulesActive__c =true, 
$User.UR100Trade25VAT__c =false, 
ISPICKVAL( PackageSubType__c , &quot;Trade&quot;) 
)</errorConditionFormula>
    <errorDisplayField>PackageSubType__c</errorDisplayField>
    <errorMessage>You are not allowed to choose the Service Sub-Type &quot;Trade&quot;. Please get in touch with Finance.
(PA028)</errorMessage>
</ValidationRule>